// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`application/state/filter/ByGeoLocationFilter it can not create a ByGeoLocationFilter if latitude is not a number between -90 and 90 1`] = `
"{
  \\"longitude\\": 2.2222,
  \\"limit\\": 200,
  \\"latitude\\" [31m[1][0m: 91
}
[31m
[1] \\"latitude\\" must be less than or equal to 90[0m"
`;

exports[`application/state/filter/ByGeoLocationFilter it can not create a ByGeoLocationFilter if latitude is not a number between -90 and 90 2`] = `
"{
  \\"longitude\\": 2.2222,
  \\"limit\\": 200,
  \\"latitude\\" [31m[1][0m: -91
}
[31m
[1] \\"latitude\\" must be larger than or equal to -90[0m"
`;

exports[`application/state/filter/ByGeoLocationFilter it can not create a ByGeoLocationFilter if longitude is not a number between -180 and 180 1`] = `
"{
  \\"latitude\\": 40.321144,
  \\"limit\\": 200,
  \\"longitude\\" [31m[1][0m: 181
}
[31m
[1] \\"longitude\\" must be less than or equal to 180[0m"
`;

exports[`application/state/filter/ByGeoLocationFilter it can not create a ByGeoLocationFilter if longitude is not a number between -180 and 180 2`] = `
"{
  \\"latitude\\": 40.321144,
  \\"limit\\": 200,
  \\"longitude\\" [31m[1][0m: -181
}
[31m
[1] \\"longitude\\" must be larger than or equal to -180[0m"
`;

exports[`application/state/filter/ByGeoLocationFilter it can not create a ByGeoLocationFilter if longitude is not a number between 0 and 10000 1`] = `
"{
  \\"latitude\\": 40.321144,
  \\"longitude\\": 2.2222,
  \\"limit\\" [31m[1][0m: 10001
}
[31m
[1] \\"limit\\" must be less than or equal to 10000[0m"
`;

exports[`application/state/filter/ByGeoLocationFilter it can not create a ByGeoLocationFilter if longitude is not a number between 0 and 10000 2`] = `
"{
  \\"latitude\\": 40.321144,
  \\"longitude\\": 2.2222,
  \\"limit\\" [31m[1][0m: -1
}
[31m
[1] \\"limit\\" must be larger than or equal to 0[0m"
`;

exports[`application/state/filter/ByGeoLocationFilter it can not create a filter if latitude is not a number between -90 and 90 1`] = `
"{
  \\"longitude\\": 2.2222,
  \\"limit\\": 200,
  \\"latitude\\" [31m[1][0m: 91
}
[31m
[1] \\"latitude\\" must be less than or equal to 90[0m"
`;

exports[`application/state/filter/ByGeoLocationFilter it can not create a filter if latitude is not a number between -90 and 90 2`] = `
"{
  \\"longitude\\": 2.2222,
  \\"limit\\": 200,
  \\"latitude\\" [31m[1][0m: -91
}
[31m
[1] \\"latitude\\" must be larger than or equal to -90[0m"
`;

exports[`application/state/filter/ByGeoLocationFilter it can not create a filter if longitude is not a number between -180 and 180 1`] = `
"{
  \\"latitude\\": 40.321144,
  \\"limit\\": 200,
  \\"longitude\\" [31m[1][0m: 181
}
[31m
[1] \\"longitude\\" must be less than or equal to 180[0m"
`;

exports[`application/state/filter/ByGeoLocationFilter it can not create a filter if longitude is not a number between -180 and 180 2`] = `
"{
  \\"latitude\\": 40.321144,
  \\"limit\\": 200,
  \\"longitude\\" [31m[1][0m: -181
}
[31m
[1] \\"longitude\\" must be larger than or equal to -180[0m"
`;

exports[`application/state/filter/ByGeoLocationFilter it can not create a filter if longitude is not a number between 0 and 10000 1`] = `
"{
  \\"latitude\\": 40.321144,
  \\"longitude\\": 2.2222,
  \\"limit\\" [31m[1][0m: 10001
}
[31m
[1] \\"limit\\" must be less than or equal to 10000[0m"
`;

exports[`application/state/filter/ByGeoLocationFilter it can not create a filter if longitude is not a number between 0 and 10000 2`] = `
"{
  \\"latitude\\": 40.321144,
  \\"longitude\\": 2.2222,
  \\"limit\\" [31m[1][0m: -1
}
[31m
[1] \\"limit\\" must be larger than or equal to 0[0m"
`;
